# cobra

./: .gitignore  LICENSE  README.md  bmm350.py  cobra_core.py  cobra_test.py  project_spec.md
cobra-bridge/: README.md
cobra-bridge/js/: README.md  dashboard.html  package.json
cobra-bridge/js/src/: constants.js  index.js  sync.js
cobra-bridge/py/: README.md  pyproject.toml
cobra-bridge/py/src/cobra_bridge/: __init__.py  constants.py  sync.py  transport.py
cobra-bridge/py/src/cobra_bridge/drivers/: __init__.py  bmm350.py  bmm350_async.py
cobra-bridge/py/tests/: test_async.py
cobra-js/: README.md  dashboard.html  package.json
cobra-js/src/: constants.js  index.js
cobra-js/src/drivers/: bmm350.js
cobra-py/: README.md  pyproject.toml
cobra-py/src/cobra_bridge/: __init__.py  async_.py  constants.py  reader.py  sync.py
cobra-py/tests/: test_async.py  test_sync.py
core/: PROTOCOL.md  protocol_spec.json
core/sensors/: README.md  bmm350.json
javascript/: bmm350.js  cobra_constants.js  cobra_core.js  cobra_sync.js  index.html
js/: README.md  bmm350_examples.html  package.json
js/src/: cobra_wrapper.js  constants.js  index.js  sync.js  transport.js
py/: README.md  pyproject.toml
py/tests/: test_cobra_wrapper.py  test_drivers.py  test_sync.py
python/: bmm350.py  bmm350_async.py  bmm350_sync.py  bmm350_test.py  bmm350_test_v2.py  bmm350_v2.py  cobra_async.py  cobra_bridge_v2.py  cobra_constants.py  cobra_core.py  cobra_reader.py  cobra_sync.py  cobra_transport.py  generate_constants_js.py  test_async.py  test_sync.py
tools/: gen_constants.py
(+24 files in other folders)
